<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single"
        android:id="@+id/menu_top">
            <item
            android:id="@+id/nav_grid"
            android:icon="@drawable/ic_menu_grid"
            android:title="@string/grid" />
            <item
            android:id="@+id/nav_list"
            android:icon="@drawable/ic_menu_list"
            android:title="@string/list" />
    </group>

    <group
        android:checkableBehavior="none"
        android:id="@+id/menu_bottom">
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_settings"
            android:title="@string/settings" />
    </group>

</menu>
